# evo-claude-science

./: README.md  SKILL.md
evo-mcp/: README.md  pyproject.toml
evo-mcp/src/evo_mcp/: __init__.py  bootstrap.py  cli.py  dashboard_widget.html  server.py  skills.py
evo-mcp/tests/: test_bootstrap.py  test_dashboard.py  test_evocli_integration.py  test_parse_run_line.py  test_skills.py
evo-mcp/tests/fixtures/: fake_evo.py
skills/evo-autoresearch-claude-science-setup/: SKILL.md
skills/evo-autoresearch-install/: SKILL.md
