[project]
name = "evo-mcp"
version = "0.1.0"
description = "MCP bridge exposing the evo autoresearch CLI as MCP tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["mcp>=1.0"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
evo-mcp = "evo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evo_mcp"]
